--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias Urgentes</title>
-    <link rel="stylesheet" href="Css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
     <link rel="icon" href="Img/newspaper_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png">
 </head>
 
